--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,12 @@
 			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
 			<version>4.0.4</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
