--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,12 @@
             <version>3.12.0</version>
             <scope>test</scope>
         </dependency>
-
-    </dependencies>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.562</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
