--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 			<artifactId>aws-java-sdk-s3</artifactId>
 			<version>1.12.562</version>
 		</dependency>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.20.161</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
