implementação Spring Boot Actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,17 @@
 url.api.tabela.fipe=https://parallelum.com.br/fipe/api/v1
 
 server.port=8080
+spring.main.allow-bean-definition-overriding=true
+
+#aws
+aws.accessKey=AKIASYGA55FBVNHNYPNT
+aws.secretKey=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
+aws.region=us-east-2
+aws.bucketName=icarros-audit-20515
+aws.endpoint=https://s3.us-east-2.amazonaws.com
+
+
+#actuator
+management.endpoint.health.show-details=always
+
+
