--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,11 @@
 			<artifactId>s3</artifactId>
 			<version>2.20.161</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>3.1.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
