--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,14 @@ server.port=8080
 spring.main.allow-bean-definition-overriding=true
 
 #aws
-aws.accessKey=AKIASYGA55FBVNHNYPNT
-aws.secretKey=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
-aws.region=us-east-2
-aws.bucketName=icarros-audit-20515
+aws.accessKey=
+aws.secretKey=
+aws.region=
+aws.bucketName=
 aws.endpoint=https://s3.us-east-2.amazonaws.com
+
+aws-dynamo-audit
+audit-table=arn:aws:dynamodb:us-east-2:644057912787:table/VehiclepediaAudit
 
 
 #actuator
